--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,8 @@ tracing-subscriber = "0.3"
 # Update uuid dependency to include serde feature
 uuid = { version = "1.3", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
+actix-web  = "4.4"
+actix-rt = "2.9"
+
+[dev-dependencies]
+actix-http = "3.0"
